# YaTrackerApi

./: .gitignore  CLAUDE.MD  README.md  env.py  main.py  pyproject.toml
.claude/: settings.local.json
YaTrackerApi/: __init__.py  base.py  exceptions.py
YaTrackerApi/automations/: __init__.py  api.py  autoactions.py  macros.py  triggers.py
YaTrackerApi/boards/: __init__.py  api.py  columns.py  sprints.py
YaTrackerApi/components/: __init__.py  api.py  permissions.py
YaTrackerApi/dashboards/: __init__.py  api.py
YaTrackerApi/entities/: api.py  attachments.py  checklists.py  comments.py  settings.py
YaTrackerApi/fields/: api.py  categories.py  local.py
YaTrackerApi/filters/: __init__.py  api.py
YaTrackerApi/imports/: __init__.py  api.py
YaTrackerApi/issue_types/: __init__.py  api.py
YaTrackerApi/issues/: api.py  attachments.py  bulk.py  checklist_item.py  checklists.py  comments.py  links.py  transitions.py
YaTrackerApi/queues/: api.py  fields.py  permissions.py  tags.py  versions.py
YaTrackerApi/users/: api.py
YaTrackerApi/worklog/: __init__.py  api.py
context/: claseses.md  files.md  general.md  history.md  tech.md
docs/: llm-reference.md
tests/: conftest.py  test_automations.py  test_components.py  test_dashboards.py  test_exceptions.py  test_filters.py  test_imports.py  test_restructure.py  test_users.py  test_worklog.py
tests/boards/: test_boards.py
tests/entities/: test_entities.py
tests/fields/: test_fields.py
tests/issues/: test_external_links.py  test_issue_types.py  test_issues.py
tests/queues/: test_queues.py
