[project]
name = "YaTrackerApi"
version = "2.2.1"
description = "Асинхронный Python клиент для работы с Yandex Tracker API с модульной архитектурой"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Даниил", email = "keemor821@gmail.com"}
]
maintainers = [
    {name = "Даниил", email = "keemor821@gmail.com"}
]
keywords = [
    "yandex",
    "tracker",
    "api",
    "async",
    "aiohttp",
    "project-management",
    "task-tracker"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Groupware",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.12.15",
    "python-dotenv>=1.1.1",
]

[project.urls]
Homepage = "https://github.com/imdeniil/YaTrackerApi"
Repository = "https://github.com/imdeniil/YaTrackerApi"
Issues = "https://github.com/imdeniil/YaTrackerApi/issues"
Documentation = "https://github.com/imdeniil/YaTrackerApi#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["YaTrackerApi"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: интеграционные тесты с реальным API Yandex Tracker",
]
